# linden-mcp

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  claude_desktop_config.example.json  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260518_0001_initial.py
docs/: architecture.md  claude-desktop.md
scripts/: client_demo.py  seed_db.py
showcase/: index.html  integrations.html  landing.html  quickstart.html  tools.html
src/mcp_server/: db.py  http_server.py  models.py  schemas.py  server.py
src/mcp_server/core/: auth.py  config.py  logging.py  ratelimit.py  sql_sandbox.py
src/mcp_server/tools/: search.py  sql.py  weather.py
tests/: conftest.py  test_auth.py  test_ratelimit.py  test_schemas.py  test_sql_sandbox.py
