[project]
name = "mcp-server"
version = "0.1.0"
description = "Production MCP server: SQL, weather, and semantic search tools"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pgvector>=0.3.6",
    "openai>=1.55",
    "httpx>=0.27",
    "tenacity>=9.0",
    "structlog>=24.4",
    "sqlglot>=25.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
mcp-server = "mcp_server.server:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "A", "C4", "T20", "SIM", "RUF"]
ignore = ["S101", "S608", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "T20"]
"scripts/*" = ["T20"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["mcp.*", "pgvector.*", "sqlglot.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
